增加部分适配

--- a/src/styles/dark.less
+++ b/src/styles/dark.less
@@ -3,4 +3,24 @@
     .v-main-scroll {
         background-color: @dark-mode-background;
     }
+    .ant-btn.ant-btn-default {
+        background-color: @dark-mode-item-background;
+        border-color: @dark-mode-item-background;
+        color: rgba(255 ,255 ,255 , .4);
+        &:hover,
+        &:active {
+            border-color: @gray-darker;
+            background-color: @gray-darker;
+            color: rgba(255 ,255 ,255 , .7);
+        }
+    }
+    .ant-input {
+        background-color: @dark-mode-item-background !important;
+        border-color: @gray-darker !important;
+        color: @dark-title-color !important;
+    }
+    .ant-message .ant-message-notice-content {
+        background-color: @dark-mode-item-background;
+        color: @dark-title-color;
+    }
 }
